tests/test_data/CodeStructureSnippets/bad/sem_err_4.4.ifj21
require "ifj21"
function main()
    local vysl : nil = 1
end
main()
